hphp/test/vm/def_cls_line.php.expectf
HipHop Fatal error: unknown class I in %s on line 3
